fixed white space

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
     --margin:0 0 20px 0;
 }
 
+
+
 *{
     margin:0;
     padding:0;
@@ -16,7 +18,7 @@
 html,body{
     line-height: 1.4;
     font-size:100%;
-    height: 100%;
+    height:auto;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -51,7 +53,7 @@ p{
     /* grid-template-columns: 40% 60%; */
     display:flex;
     flex-direction:column;
-    height:100vh;
+    min-height:100vh;
 }
 
 aside{
